--- a/Android/Lead/app/src/main/res/values/strings.xml
+++ b/Android/Lead/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="text_login_lead">Welcome to Lead</string>
     <string name="button_text_login">Login</string>
 
     <string name="facebook_app_id">1594135340854170</string>
