--- a/Android/Lead/app/src/main/res/values/strings.xml
+++ b/Android/Lead/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="dialog_toolbar_project_title">Select A Project</string>
     <string name="dialog_description_delete_tag">Delete this tag?</string>
     <string name="dialog_description_delete_project">Delete this project?</string>
-
+    <string name="dialog_toolbar_upload_file_progress_title">Uploading Progress</string>
 
     <string name="dialog_overflow_menu_edit">Edit</string>
     <string name="dialog_overflow_menu_delete">Delete</string>
